Made it work steam wide (excluding checkout), more realiable, full path to image because it also works on the other steam domain

--- a/manifest.json
+++ b/manifest.json
@@ -12,12 +12,9 @@
 
     "content_scripts": [
       {
-        "matches": ["*://store.steampowered.com/app/*"],
+        "exclude_matches": ["*://store.steampowered.com/cart/*", "*://store.steampowered.com/checkout/*"],
+        "matches": ["*://store.steampowered.com/*", "*://steamcommunity.com/*"],
         "js": ["openinsteam.js"]
-      },
-      {
-        "matches": ["*://store.steampowered.com/agecheck/app/*"],
-        "js": ["openinsteamage.js"]
       }
     ]
   }
