--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
 
     "manifest_version": 2,
     "name": "OpenInSteam",
-    "version": "1.1",
+    "version": "1.2",
   
-    "description": "Adds a button to open the current page in Steam.",
+    "description": "Adds a button to open the current Steam page inside Steam.",
   
     "icons": {
       "48": "icons/openinsteam-48.png"
