--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "icons": {
     "48": "icons/openinsteam-48.png"
   },
-  "permissions": ["menus", "tabs"],
+  "permissions": ["contextMenus", "tabs"],
   "background": {
     "scripts": ["openinsteam-bg.js"]
   },
@@ -18,7 +18,11 @@
         "*://store.steampowered.com/cart/*",
         "*://store.steampowered.com/checkout/*"
       ],
-      "matches": ["*://store.steampowered.com/*", "*://steamcommunity.com/*"],
+      "matches": [
+        "*://store.steampowered.com/*",
+        "*://steamcommunity.com/*",
+        "*://help.steampowered.com/*"
+      ],
       "js": ["openinsteam.js"]
     }
   ]
